RELEASENOTES: IMEx Central
---------------------------

$HeadURL$
$Id$ 

2009/12/13 BETA-0.6

 - corrected number of pages/publications in the publication table pager
 - added functional add/drop state and transition actions to workflow editors
   

2010/02/27 BETA-0.71

 - key assigner and initial web services framework added
 - ACL system updates
 - GUI updates:
    - publication editor actions added: 
         - availability status, 
         - contact email 
         - curation status
         - key assigner
    - journal manager converted to YUI tables
 - CSS modified in order to visually distinguish between test/beta/production 
   sites 
 - pom.xml modifications 
